--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "geospatial-messaging-client",
-  "version": "1.0.0",
+  "name": "@sudowing/geospatial-messaging-client",
+  "version": "1.0.1",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "demo": "node src/index.js"
+    "demo": "node src/index.js",
+    "release": "standard-version && git push --follow-tags && npm publish"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +18,8 @@
     "rxjs": "^7.8.1",
     "set-operations": "^2.0.2",
     "wkx": "^0.5.0"
+  },
+  "devDependencies": {
+    "standard-version": "^9.5.0"
   }
 }
