--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@sudowing/geospatial-messaging-client",
-  "version": "1.0.3",
+  "name": "geospatial-messaging-client",
+  "version": "1.0.4",
   "description": "",
   "main": "src/index.js",
   "scripts": {
